--- a/static/styles.css
+++ b/static/styles.css
@@ -25,7 +25,6 @@ select.custom-select {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: stretch;
     padding: 0;
     margin: -1rem;
 }
@@ -231,4 +230,28 @@ div.rounded {
     border: 2px #aaa;
     border-radius: 8px;
     transition: box-shadow .1s ease,border-color .1s ease;
+}
+.sidebar {
+    display: flex;
+    width: 20%;
+    padding-top:2rem;
+    align-items: center;
+    border-right: 2px solid #aaa;
+    height: 95vh;
+    z-index: 2;
+}
+
+.sidebar-item {
+    width: 100%;
+    justify-content: center;
+    display: flex;
+    margin-top:20px
+}
+.smallcaps-text {
+    font-size: 18px;
+    font-variant: small-caps;;
+}
+
+.centered {
+    justify-content: center;
 }
