--- a/templates/select.html
+++ b/templates/select.html
@@ -34,13 +34,13 @@
                             <form action="/select+language" method="POST" style="display:flex">
                                 <div class="center-container half rounded">
                                         <button onclick="setLang(cn)" class="clickable" name="language" id="cn" value="cn" style="background: #fff;">
-                                            <img style="width: 100%; border:1px #aaa" src="../static/chinaflag.png">   
+                                            <img style="width: 100%; border:1px #aaa" src="../static/cnflag.png">   
                                             <span>Chinese(Simplified)</span>
                                         </button>   
                                 </div>       
                                 <div class="center-container half rounded">               
                                         <button onclick="setLang(jp)" class="clickable" name="language" id="jp" value="jp" style="background:#fff">
-                                            <img style="width: 100%; border: 1px #aaa" src="../static/jpnflag.png">
+                                            <img style="width: 100%; border: 1px #aaa" src="../static/jpflag.png">
                                             <span>Japanese</span>
                                         </button>
                                 </div>
