--- a/templates/language.html
+++ b/templates/language.html
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="ui" style="width:100%; justify-content: center;overflow: scroll;max-height: 100vh;">
+                    <div class="ui" style="width:100%; overflow: scroll; max-height: 100vh; display: inline-block;">
                         <div class="row" style="height:fit-content">
                                 <div onclick="home()" class="left aligned column" style="display:flex">
                                     <div class="two-col">
@@ -82,7 +82,7 @@
                         </div>
                         <div style="flex-direction: column;">
                             <div class="left aligned column main-col" style="max-width: 800px">
-                                <div class="center-container" id="text"></div>
+                                <div class="center-container" id="text" style="text-align: left;"></div>
                             </div>
                         </div>   
                         </div>
