--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,7 +23,7 @@
         <main>
             <div class="urbanist-main">
                 <div class="ui top" style="margin-top:0px; height: 100vh">
-                    <div class="row" style="align-items: center;">
+                    <div class="row" style="align-items: center; height: 100%;">
                         <div class="left aligned column main-col" style="max-width: 400px;margin:auto">
                             <div style="display:flex; flex-direction: row;">
                                 <form action="/" style="margin-right:-35.1655px"><button style="background: none; border: none" class="icon">&#x2715;</button></form>
