--- a/templates/language-guest.html
+++ b/templates/language-guest.html
@@ -42,11 +42,11 @@
                         </div>
                         <div style="flex-direction: column;">
                             <div class="left aligned column main-col" style="max-width: 800px">
-                                <div class="center-container" id="text"></div>
+                                <div class="center-container" id="text" style="text-align: left;"></div>
                             </div>
                             <div>
-                                <form action="/logout" style="width:100%">
-                                    <button class="white long smallcaps-text" style="width:100%; color:black; border:0px">
+                                <form action="/logout" style="width:100%; display:flex; justify-content: center;">
+                                    <button class="white long smallcaps-text" style="width:fit-content; color:black; border:0px">
                                         return home
                                     </button>
                                 </form>
