--- a/templates/profile.html
+++ b/templates/profile.html
@@ -71,19 +71,22 @@
                                     </div>
                                 </div>
                         </div>
-                        <div class="center-container" style="flex-direction: column; padding-top:0px">
-                            Reading since
-                        </div>   
-                        <div class="center-container">
-                            <span>Current Language:</span>
-                            <form action="/select+language">
-                                {% if language == "cn" %}
-                                <button class="white clickable" name="language" id="cn" value="cn"><img style="width: 40px" src="../static/cnflag.png"></button>
-                                {% elif language == "jp" %}
-                                <button class="white clickable" name="language" id="jp" value="jp"><img style="width: 40px" src="../static/jpflag.png"></button>
-                                {% endif %}
-                            </form>
-                        </div>
+                        <div class="row">
+                            <div class="center-container" style="flex-direction: column; padding-top:0px">
+                                <p>Reading since:</p>
+                                <p>{{ starttime }}</p>
+                            </div>  
+                            <div class="center-container">
+                                <span>Current Language:</span>
+                                <form action="/select+language">
+                                    {% if language == "cn" %}
+                                    <button class="white clickable" name="language" id="cn" value="cn"><img style="width: 40px" src="../static/cnflag.png"></button>
+                                    {% elif language == "jp" %}
+                                    <button class="white clickable" name="language" id="jp" value="jp"><img style="width: 40px" src="../static/jpflag.png"></button>
+                                    {% endif %}
+                                </form>
+                            </div>
+                        </div> 
                     </div>
                 </div>
             </div>
