dev code for vocab list and story generator

--- a/templates/language.html
+++ b/templates/language.html
@@ -30,7 +30,9 @@
             <div class="urbanist-main">
                 <div style="display:flex; flex-direction: row;">
                     <div class="sidebar" style="flex-direction: column;">
-                        <img style="height: 40px" src="../static/wordweaverlogo.png">
+                        <a href="/" style="display: inline-block; height: 40px;">
+                            <img style="height: 100%;" src="../static/wordweaverlogo.png" alt="Home">
+                        </a>                        
                         <div style="display: flex; flex-direction: column; margin-top:15px; width:90%">
                             <div class="sidebar-item" >
                                 <form action="/read" style="width:100%">
