--- a/templates/language-guest.html
+++ b/templates/language-guest.html
@@ -16,7 +16,7 @@
         <link href="https://fonts.googleapis.com/css2?&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     </head>
-    <body onload="loadText()">
+    <body">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -42,7 +42,9 @@
                         </div>
                         <div style="flex-direction: column;">
                             <div class="left aligned column main-col" style="max-width: 800px">
-                                <div class="center-container" id="text" style="text-align: left;"></div>
+                                <div class="center-container" id="text" style="text-align: left;">
+                                    {% for span in spans %}<span class="inline" value="{{ span }}" data-tooltip="{{ span }}">{{ span }}</span>{% endfor %}
+                                </div>
                             </div>
                             <div>
                                 <form action="/logout" style="width:100%; display:flex; justify-content: center;">
