--- a/templates/vocab.html
+++ b/templates/vocab.html
@@ -8,14 +8,68 @@
     <link href="https://fonts.googleapis.com/css2?&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="huge">Your Vocabulary List</h1>
-    {% for level, words in vocab.items() %}
-        <h2>{{ level.capitalize() }}</h2>
-        <ul>
-        {% for word in words %}
-            <li>{{ word }}</li>
-        {% endfor %}
-        </ul>
-    {% endfor %}
+    <div class="urbanist-main">
+        <div style="display:flex; flex-direction: row;">
+            <div class="sidebar" style="flex-direction: column;">
+                <a href="/" style="display: inline-block; height: 40px;">
+                    <img style="height: 100%;" src="../static/wordweaverlogo.png" alt="Home">
+                </a>                        
+                <div style="display: flex; flex-direction: column; margin-top:15px; width:90%">
+                    <div class="sidebar-item" >
+                        <form action="/read" style="width:100%">
+                            <button class="long smallcaps-text" style="width:100%; color:black; border:0px; background: #ddd; border: 1px solid #3066be">
+                                read
+                            </button>
+                        </form>
+                    </div>
+                    <div class="sidebar-item" >
+                        <form action="/read" style="width:100%">
+                            <button class="white long smallcaps-text" style="width:100%; color:black; border:0px">
+                                write
+                            </button>
+                        </form>
+                    </div>
+                    <div class="sidebar-item" >
+                        <form action="/vocab" style="width:100%">
+                            <button class="white long smallcaps-text" style="width:100%; color:black; border:0px">
+                                vocabulary
+                            </button>
+                        </form>
+                    </div>
+                    <div class="sidebar-item" >
+                        <form action="/profile" style="width:100%">
+                            <button class="white long smallcaps-text" style="width:100%; color:black; border:0px">
+                                profile
+                            </button>
+                        </form>
+                    </div>
+                    <div class="sidebar-item" >
+                        <form action="/logout" style="width:100%">
+                            <button class="white long smallcaps-text" style="width:100%; color:black; border:0px">
+                                log out
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="ui" style="width:100%; overflow: scroll; max-height: 100vh; display: inline-block;">
+                <div style="flex-direction: column;">
+                    <div class="left aligned column main-col" style="max-width: 800px">
+                        <div class="center-container" id="text" style="text-align: left;">
+                            <h1 class="huge">Your Vocabulary List</h1>
+                            {% for level, words in vocab.items() %}
+                                <h2>{{ level.capitalize() }}</h2>
+                                <ul>
+                                {% for word in words %}
+                                    <li>{{ word }}</li>
+                                {% endfor %}
+                                </ul>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
