--- a/templates/language.html
+++ b/templates/language.html
@@ -85,7 +85,7 @@
                         <div style="flex-direction: column;">
                             <div class="left aligned column main-col" style="max-width: 800px">
                                 <div class="center-container" id="text" style="text-align: left;">
-                                    {% for span in spans %}<span style="position:relative;" onmouseover="displayText({{ span.id }})" onmouseleave="hideText({{ span.id }})" class="inline" value="{{ span.orth }}" data-tooltip="{{ span.orth }}"><div class="popup" id="{{ span.id }}"><form method="POST"><span>{{ span.orth }}</span><p></p><button value="{{ span.orth }}" name="word" class="blue" action="/read">Add To Vocab</button></form></div>{{ span.orth }}</span>{% endfor %}
+                                    {% for span in spans %}<span style="position:relative;" onmouseover="displayText({{ span.id }})" onmouseleave="hideText({{ span.id }})" class="inline" value="{{ span.lemma }}" data-tooltip="{{ span.orth }}"><div class="popup" id="{{ span.id }}"><form method="POST"><span>{{ span.orth }}</span><p></p><button value="{{ span.orth }}" name="word" class="blue" action="/read">I don't know this</button></form></div>{{ span.orth }}</span>{% endfor %}
                                 </div>
                             </div>
                         </div>   
