--- a/templates/language.html
+++ b/templates/language.html
@@ -82,13 +82,32 @@
                                     </div>
                                 </div>
                         </div>
+                        {% if language == "cn" %}
                         <div style="flex-direction: column;">
                             <div class="left aligned column main-col" style="max-width: 800px">
                                 <div class="center-container" id="text" style="text-align: left;">
-                                    {% for span in spans %}<span style="position:relative;" onmouseover="displayText({{ span.id }})" onmouseleave="hideText({{ span.id }})" class="inline" value="{{ span.lemma }}" data-tooltip="{{ span.orth }}"><div class="popup" id="{{ span.id }}"><form method="POST"><span>{{ span.orth }}</span><p></p><button value="{{ span.orth }}" name="word" class="blue" action="/read">I don't know this</button></form></div>{{ span.orth }}</span>{% endfor %}
+                                    {% for span in spans %}<span style="position:relative;" onmouseover="displayText({{ span.id }})" onmouseleave="hideText({{ span.id }})" class="inline" value="{{ span.lemma }}" data-tooltip="{{ span.orth }}"><div class="popup" id="{{ span.id }}"><form method="POST"><span>{{ span.lemma }}</span><p></p><button onclick="flash()" value="{{ span.lemma }}" name="word" class="blue" action="/read">I don't know this</button></form></div>{{ span.orth }}</span>{% endfor %}
                                 </div>
                             </div>
-                        </div>   
+                        </div>
+                        {% elif language == "jp" %}
+                        <div style="flex-direction: row;">
+                            <div style="flex-direction: column;">
+                                <div class="left aligned column main-col" style="max-width: 800px">
+                                    <div class="center-container" id="text" style="text-align: left;">
+                                        {% for span in spans %}<span style="position:relative;" onmouseover="displayText({{ span.id }})" onmouseleave="hideText({{ span.id }})" class="inline" value="{{ span.lemma }}" data-tooltip="{{ span.orth }}"><div class="popup" id="{{ span.id }}"><form method="POST"><span>{{ span.lemma }}</span><p></p><button onclick="flash()" value="{{ span.lemma }}" name="word" class="blue" action="/read">I don't know this</button></form></div>{{ span.orth }}</span>{% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                            <div style="flex-direction: column;">
+                                <div class="left aligned column main-col" style="max-width: 800px">
+                                    <div class="center-container" id="text" style="text-align: left;">
+                                        <span style="position:relative;" class="inline">{{ eng_spans }}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {% endif %}
                         </div>
                     </div>
                 </div>
